# foolang

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ai-test-gen.yml
examples/: hello.foo
scripts/: ai_test_generator.py  requirements-ci.txt
src/foolang/: __init__.py  ast.py  cli.py  codegen.py  lexer.py  optimizer.py  parser.py
tests/: test_codegen.py  test_generated.py  test_lexer.py  test_optimizer.py  test_parser.py
