[project]
name = "foolang"
version = "0.1.0"
description = "A simple DSL that transpiles to JavaScript with optimizations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
foolang = "foolang.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foolang"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]
